src/styles.css
body {
    font-size: 10pt;
    font-family: sans-serif;
}

.me {
    font-weight: bold;
    border: solid #c83803 4px;
    background-color: #0b162a;
    color: white;
    padding: 0.5em;
    border-radius: 8px;
}

.matt {
    color: olive;
}

.dojoxGrid {
    font-family: inherit;
}

.count {
    margin-left: 10px;
    margin-bottom: 5px;
}

#iterations {
    float: left;
}

#wait {
    float: left;
    height: 16px;
    width: 24px;
}

.parchment {
    position: relative;
}

.parchment .background {
    width: 50%;
    height: 100%;

    padding: 16px;
    box-shadow: 2px 3px 20px #6e4b27, 0 0 25px #8f5922 inset;
    background: #fffef0;
    filter: url(#wavy2);
}

.parchment .text {
    top: 8px;
    position: absolute;
    height: 100%;
    width: 100%;
    text-align: center;
}

h4#UserNameHeader {
    clear: both;
    padding-top: 15px;
}

.defect-display {
    margin-bottom: 2em;
    padding: 2em;
    border: solid black 2px;
    border-radius: 8px;
    width: fit-content;
}

.story-display {
    display: flex;
    flex-direction: column;
    gap: 2em;
    align-items: stretch;
    flex-wrap: wrap;
    align-content: flex-start;
}

.story-chunk {
    padding: 2em;
    border: solid black 2px;
    border-radius: 8px;
}

.story-title {
    margin-bottom: 1em;
    display: flex;
    align-items: baseline;
    font-size: 24px;
    gap: 1em;
}

.story-owner {
    font-style: italic;
    font-size: 18px;
    font-weight: bold;
    color: rgb(7, 102, 146);
    animation: colorfade 900s infinite;
    animation-direction: alternate;
    animation-timing-function: ease;
}

.defect-id {
    background-color: rgb(146, 51, 7);
    color: white;
    padding-right: 3px;
    padding-left: 6px;
    margin-right: 6px;
    border-radius: 9px;
}

.story-id {
    background-color: rgb(102, 146, 7);
    color: white;
    padding-right: 3px;
    padding-left: 6px;
    margin-right: 6px;
    border-radius: 9px;
}

.release-name {
    color: white;
    padding-right: 0.2em;
    padding-left: 6px;
    margin-right: 6px;
    border-radius: 9px;
    background-color: rgb(7, 102, 146);
}

.artifact-title {
    font-size: 18px;
    font-weight: bold;
}

.story-estimate {
    font-size: 18px;
    font-weight: bold;
    text-align: right;
    border: solid black 1px;

    border-radius: 48px;
    width: 2em;
    height: 2em;
    text-align: center;
    line-height: 2em;
}

.task-estimate {
    font-size: 18px;
    text-align: right;
}

.small-link {
    font-size: 14px;
    font-weight: normal;
}

.dojoxGridCell {
    padding: 3px 3px 3px 3px;
}

td.dojoxGridCell {
    font-size: 16px;
    padding-top: 4px;
    padding-bottom: 4px;
}

@keyframes blink {
    50% { opacity: 0; }
}

@keyframes colorfade {
    17% { color: blue; }
    33% { color: purple; }
    50% { color: red; }
    67% { color: orange; }
    83% { color: gold; }
    100% { color: green; }
}

.table-group {
    float: left;
    margin-right: 14px;
}

td.number {
    text-align: right;
}

.table-stats {
    border-collapse: collapse;
    margin-bottom: 10px;
}

.table-stats td {
    border: solid grey 1px;
    padding: 5px;
    padding-right: 10px;
    min-width: 100px;
}

.lifecycle {
    font-size: 14px;
    color: rgb(150, 150, 150);
    font-weight: bold;
}

.iter-time-left {
    font-size: 32px;
    font-family: "Impact", monospace;
}

.big-defect-parent {
    display: flex;
    gap: 12px;
}

.defect-total-container {
    font-family: "Impact", monospace;
    font-size: 36px;
    text-align: center;
    border: solid black 2px;
    border-radius: 6px;
    width: max-content;
    min-width: 160px;
    padding-right: 10px;
    padding-left: 10px;
    padding-top: 4px;
    margin-right: 2px;
}

.big-defect {
    font-size: 128px;
    line-height: 128px;
    -webkit-text-stroke: 2px black;
    -webkit-text-fill-color: lightgrey;
}

.mytable {
    font-size: 14px;
    border-collapse: collapse;
    width: 100%;
}

.mytable th {
    border-bottom: double black 2px;
}

.mytable td {
    border-bottom: solid black 1px;
    border-right: dotted black 1px;

    padding-top: 0.5em;
    padding-bottom: 0.5em;
    padding-right: 0.5em;
    padding-left: 0.5em;
}

.defect-with-tasks {
    color: grey;
}

.mytable tr:hover {
    background-color: rgba(0, 0, 0, 0.1);
}

.mytable tr.blocked:hover {
    background-color: rgba(255, 0, 0, 0.1);
}

.mytable tr:last-child td {
    border-bottom: 0;
}

.mytable td:last-child {
    border-right: 0;
}

.main-container {
    display: flex;
    flex-direction: column;
    gap: 2em;
    margin: 2em;
}

.main-container > div {
    margin: 1em;
}

